# split-graph-ern

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cpp/: Makefile  bip2split.cpp  dern.cpp  small_graph.hpp
docs/: PIPELINE_OPTIMIZATIONS.md
scripts/: dern_parallel.py  gen_split_n.sh  run_split_dern_n.sh  run_split_dern_n_parallel.sh  run_split_ern_n_parallel.sh
src/ern/: __init__.py  __main__.py  canonical.py  checkpoint.py  cli.py  global_solver.py  graph6.py  local_solver.py  nauty.py  reconstruction.py  split.py  stats.py
tests/: conftest.py  test_canonical.py  test_graph6.py  test_nauty.py  test_reconstruction.py  test_solvers.py  test_split.py
tests/regression/: _harness.py  test_dern_regression.py  test_regression.py
