[project]
name = "ern-split-graphs"
version = "0.1.0"
description = "Tools for computing edge reconstruction numbers (ERN/DERN) of split graphs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tolgahan Poyraz", email = "tolgahanpoyraz@icloud.com" }]
keywords = ["graph-theory", "reconstruction", "split-graphs", "nauty", "combinatorics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
]
# Runtime is pure standard library; the pipeline shells out to nauty/gtools
# (geng, labelg, shortg, genbg) and to the compiled C++ tools in cpp/.
dependencies = []

[project.scripts]
ern = "ern.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ern"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running regression checks (run with --run-slow)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
